# python_ffi_code_examples

./: .gitignore  README.md
cffi/pass_array/: CMakeLists.txt  Makefile  README.md  square.c  square.f90  square_wrapper.py
cffi/pass_double/: CMakeLists.txt  Makefile  README.md  square.c  square.f90  square_wrapper.py
f2py/pass_real_array/: README.md  square.f90  test_square.py
f2py/pass_real_scalar/: README.md  setup.py  square.f90  test_square.py
python_c_api/pass_numpy_array/: README.md  setup.py  square.c  test_square.py
python_c_api/pass_return_double/: CMakeLists.txt  README.md  square.c  test_square.py
python_c_api/pass_return_float/: setup.py  square.c  test_square.py
